--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -16,6 +16,20 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+
+            {{ if .NameWarning }}
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  {{ trFormat .App .NameWarning.Key "Type" .NameWarning.Type "FirstNames" .NameWarning.FirstNames "LastName" .NameWarning.LastName }}
+                  {{ tr .App "bySavingThisSectionDifferentPeople" }}
+                </strong>
+              </div>
+
+              <input type="hidden" name="ignore-name-warning" value="{{ .NameWarning.String }}" />
+            {{ end }}
+
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
             {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
 
