--- a/app/web/template/choose_people_to_notify.gohtml
+++ b/app/web/template/choose_people_to_notify.gohtml
@@ -14,6 +14,20 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+
+            {{ if .NameWarning }}
+              <div class="govuk-warning-text">
+                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                <strong class="govuk-warning-text__text">
+                  <span class="govuk-warning-text__assistive">Warning</span>
+                  {{ .NameWarning.Format .App.Localizer }}
+                  {{ tr .App "bySavingThisSectionDifferentPeople" }}
+                </strong>
+              </div>
+
+              <input type="hidden" name="ignore-name-warning" value="{{ .NameWarning.String }}" />
+            {{ end }}
+
             {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
             <div class="govuk-button-group">
