--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -16,6 +16,9 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+
+            {{ template "name-warning" . }}
+            
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
             {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
 
