--- a/app/web/template/choose_people_to_notify.gohtml
+++ b/app/web/template/choose_people_to_notify.gohtml
@@ -14,6 +14,9 @@
 
             {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+
+            {{ template "name-warning" . }}
+            
             {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
             <div class="govuk-button-group">
