--- a/app/web/template/witnessing_your_signature.gohtml
+++ b/app/web/template/witnessing_your_signature.gohtml
@@ -7,7 +7,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ tr .App "witnessYourSignature" }}</h1>
 
-      {{ trFormatHtml .App "witnessYourSignatureContent" "CpFullName" .Lpa.CertificateProviderFullName "CpFirstNames" .Lpa.CertificateProvider.FirstNames }}
+      {{ trFormatHtml .App "witnessYourSignatureContent" "CpFullName" .Lpa.CertificateProvider.FullName "CpFirstNames" .Lpa.CertificateProvider.FirstNames }}
 
       {{ $warningContent := trFormat .App "witnessCodeTimeWarning" "CpFirstNames" .Lpa.CertificateProvider.FirstNames }}
       {{ template "warning" (warning .App $warningContent)  }}
