--- a/app/web/template/you_have_submitted_your_lpa.gohtml
+++ b/app/web/template/you_have_submitted_your_lpa.gohtml
@@ -11,7 +11,7 @@
 
       <h2 class="govuk-heading-m">{{ tr .App "whatHappensNext" }}</h2>
 
-      {{ trFormatHtml .App "nextStepsList" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysFullNames" .Lpa.AttorneysFullNames }}
+      {{ trFormatHtml .App "nextStepsList" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysFullNames" .Lpa.Attorneys.FullNames }}
 
       {{ trHtml .App "weWillEmailYou" }}
 
