--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -32,7 +32,7 @@
         <div class="moj-ticket-panel">
           <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
             <p class="govuk-body govuk-!-font-weight-bold">
-              {{ trFormat .App "iConfirmThat" "DonorFullName" .Lpa.DonorFullName }}
+              {{ trFormat .App "iConfirmThat" "DonorFullName" .Lpa.You.FullName }}
             </p>
 
             <div class="govuk-form-group {{ if .Errors.Has "sign-lpa" }}govuk-form-group--error{{ end }}">
