--- a/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
+++ b/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
@@ -9,7 +9,7 @@
       {{ trHtml .App "whoDoYouWantToBeCertificateProviderGuidanceIntro" }}
       {{ trHtml .App "whatYourCertificateProviderHasToDo" }}
       {{ trHtml .App "whoToChooseAsYourCertificateProvider" }}
-      {{ trFormatHtml .App "whoCannotBeACertificateProvider" "AttorneysFirstNames" .Lpa.AttorneysFirstNames }}
+      {{ trFormatHtml .App "whoCannotBeACertificateProvider" "AttorneysFirstNames" .Lpa.Attorneys.FirstNames }}
       {{ trHtml .App "detailsYoullNeedAboutYourCertificateProvider" }}
 
       <form novalidate method="post">
