--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -157,6 +157,11 @@
                     {{ tr .App "toggleTransKeys" }}
                   </a>
                 </li>
+                <li class="govuk-footer__inline-list-item">
+                  <a class="govuk-footer__link" href="testing-certificate-provider-start">
+                    Certificate provider start
+                  </a>
+                </li>
               </ul>
 
               <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
