--- a/app/web/template/certificate_provider_your_details.gohtml
+++ b/app/web/template/certificate_provider_your_details.gohtml
@@ -1,13 +1,33 @@
 {{ template "page" . }}
 
-{{ define "pageTitle" }}{{ end }}
+{{ define "pageTitle" }}{{ tr .App "yourDetails" }}{{ end }}
 
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body">TODO, but proof it works:</p>
       <p class="govuk-body">Donor is {{ .Lpa.You.FullName }}</p>
-      <p class="govuk-body">Certificate provider is {{ .Lpa.CertificateProvider.FullName }}</p>
+      <p class="govuk-body">Certificate provider name (via OneLogin) is {{ .Lpa.CertificateProviderUserData.FullName }}</p>
+
+      <form novalidate method="post">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              <h1 class="govuk-fieldset__heading">{{ tr .App "yourDetails" }}</h1>
+            </legend>
+
+            {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
+
+            {{ template "dob-warning" . }}
+
+            {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
+
+            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "classes" "govuk-input--width-20 govuk-!-margin-bottom-6" "type" "tel" "autocomplete" "tel") }}
+
+            {{ template "continue-button" . }}
+          </fieldset>
+        </div>
+        {{ template "csrf-field" . }}
+      </form>
     </div>
   </div>
 {{ end }}
