save address details to cp provided details

--- a/app/web/template/certificate_provider_your_details.gohtml
+++ b/app/web/template/certificate_provider_your_details.gohtml
@@ -5,15 +5,18 @@
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-body">Donor is {{ .Lpa.You.FullName }}</p>
-      <p class="govuk-body">Certificate provider name (via OneLogin) is {{ .Lpa.CertificateProviderUserData.FullName }}</p>
-
       <form novalidate method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">{{ tr .App "yourDetails" }}</h1>
             </legend>
+
+            <h2 class="govuk-heading-m">Donor name</h2>
+            <p class="govuk-body">{{ .Lpa.You.FullName }}</p>
+
+            <h2 class="govuk-heading-m">Your name</h2>
+            <p class="govuk-body">{{ .Lpa.CertificateProviderUserData.FullName }}</p>
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
