Remove continue argument from guidance
Since we added the paths to appData it isn't necessary, and ignored in a bunch
of places.

--- a/app/web/template/your_legal_rights_and_responsibilities.gohtml
+++ b/app/web/template/your_legal_rights_and_responsibilities.gohtml
@@ -10,7 +10,7 @@
       {{ trHtml .App "yourLegalRightsAndResponsibilitiesContent" }}
       
       <p class="govuk-button-group govuk-!-margin-top-8">
-        <a href="{{ link .App .Continue }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+        <a href="{{ link .App .App.Paths.SignYourLpa }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
           {{ tr .App "continueToSigningPage" }}
         </a>
       </p>
