--- a/app/web/template/how_to_confirm_your_identity_and_sign.gohtml
+++ b/app/web/template/how_to_confirm_your_identity_and_sign.gohtml
@@ -17,7 +17,7 @@
           </div>
         </div>
 
-        <a class="govuk-button" href="{{ link .App .Continue }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
+        <a class="govuk-button" href="{{ link .App .App.Paths.WhatYoullNeedToConfirmYourIdentity }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
       </div>
     </div>
 {{ end }}
