--- a/app/web/template/what_youll_need_to_confirm_your_identity.gohtml
+++ b/app/web/template/what_youll_need_to_confirm_your_identity.gohtml
@@ -9,7 +9,7 @@
 
       {{ trHtml .App "whatYoullNeedToConfirmYourIdentityContent" }}
 
-      <a class="govuk-button govuk-!-margin-top-4" href="{{ link .App .Continue }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
+      <a class="govuk-button govuk-!-margin-top-4" href="{{ link .App .App.Paths.SelectYourIdentityOptions }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
     </div>
   </div>
 {{ end }}
