--- a/app/web/template/certificate_provider_read_the_lpa.gohtml
+++ b/app/web/template/certificate_provider_read_the_lpa.gohtml
@@ -22,7 +22,7 @@
             {{ template "people-named-on-lpa" (peopleNamedOnLpa .App .Lpa false) }}
 
             <p class="govuk-body">
-                <a href="{{ link .App .Continue }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+                <a href="{{ link .App .App.Paths.CertificateProviderGuidance }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
                     {{ tr .App "continue" }}
                 </a>
             </p>
