--- a/app/web/template/provide_certificate.gohtml
+++ b/app/web/template/provide_certificate.gohtml
@@ -1,6 +1,6 @@
 {{ template "page" . }}
 
-{{ define "pageTitle" }}{{ tr .App "agreeToStatement" }}{{ end }}
+{{ define "pageTitle" }}{{ tr .App "provideTheCertificate" }}{{ end }}
 
 {{ define "main" }}
     <div class="govuk-grid-row">
