update path to provide-certificate

--- a/web/template/certificate_provider_guidance.gohtml
+++ b/web/template/certificate_provider_guidance.gohtml
@@ -10,7 +10,7 @@
       {{ trHtml .App "beingACertificateProviderContent" }}
 
       {{ if .Lpa.Progress.LpaSigned.Completed }}
-        <a class="govuk-button" href="/certificate-provider-next" data-module="govuk-button">{{ tr .App "continue" }}</a>
+        <a class="govuk-button" href={{ link .App .App.Paths.ProvideCertificate }} data-module="govuk-button">{{ tr .App "continue" }}</a>
       {{ else }}
         <a class="govuk-button" href="{{ link .App .App.Paths.CertificateProviderConfirmation }}" data-module="govuk-button">{{ tr .App "continue" }}</a>
       {{ end }}
