--- a/web/template/fixtures.gohtml
+++ b/web/template/fixtures.gohtml
@@ -5,13 +5,15 @@
 {{ define "main" }}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-xl">Fixtures</h1>
+
             <form novalidate method="post">
                 <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                            <h1 class="govuk-fieldset__heading">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                            <h2 class="govuk-fieldset__heading">
                                 Pre-complete donor flow
-                            </h1>
+                            </h2>
                         </legend>
                         <div id="waste-hint" class="govuk-hint">
                             Select all that apply.
@@ -77,6 +79,13 @@
                                     Confirm your identity and sign the LPA
                                 </label>
                             </div>
+                            <div class="govuk-checkboxes__divider">or</div>
+                            <div class="govuk-checkboxes__item">
+                                <input class="govuk-checkboxes__input" id="f-complete-all-sections" name="complete-all-sections" type="checkbox" value="completeLpa">
+                                <label class="govuk-label govuk-checkboxes__label" for="f-complete-all-sections">
+                                    Complete all sections
+                                </label>
+                            </div>
                         </div>
 
                         <button type="submit" class="govuk-button" data-module="govuk-button">Create LPA</button>
@@ -84,6 +93,10 @@
                 </div>
                 {{ template "csrf-field" . }}
             </form>
+
+            <h2 class="govuk-heading-m">Start certificate provider journey</h2>
+            <a class="govuk-button" href="{{ .CPStartLpaSignedPath }}" data-module="govuk-button">LPA signed</a>
+            <a class="govuk-button" href="{{ .CPStartLpaNotSignedPath }}" data-module="govuk-button">LPA not signed</a>
         </div>
     </div>
 {{ end }}
