Add content for certificate provider start page
Also change the service name for those pages to match

--- a/web/template/certificate_provider_confirmation.gohtml
+++ b/web/template/certificate_provider_confirmation.gohtml
@@ -1,5 +1,6 @@
 {{ template "page" . }}
 
+{{ define "serviceName" }}{{ tr .App "beACertificateProvider" }}{{ end }}
 {{ define "pageTitle" }}{{ tr .App "finishedForNow" }}{{ end }}
 
 {{ define "main" }}
