--- a/web/template/identity_with_one_login_callback.gohtml
+++ b/web/template/identity_with_one_login_callback.gohtml
@@ -1,5 +1,12 @@
 {{ template "page" . }}
 
+{{ define "serviceName" }}
+  {{ if eq .App.Page .App.Paths.CertificateProviderLoginCallback }}
+    {{ tr .App "beACertificateProvider" }}
+  {{ else }}
+    {{ tr .App "serviceName" }}
+  {{ end }}
+{{ end }}
 {{ define "pageTitle" }}
   {{ if .CouldNotConfirm }}
     {{ tr .App "yourIdentityNotConfirmedWithOneLogin" }}
