--- a/web/template/your_address.gohtml
+++ b/web/template/your_address.gohtml
@@ -1,5 +1,12 @@
 {{ template "page" . }}
 
+{{ define "serviceName" }}
+  {{ if eq .App.Page .App.Paths.CertificateProviderYourAddress }}
+    {{ tr .App "beACertificateProvider" }}
+  {{ else }}
+    {{ tr .App "serviceName" }}
+  {{ end }}
+{{ end }}
 {{ define "pageTitle" }}{{ tr .App "whatIsYourAddress" }}{{ end }}
 
 {{ define "main" }}
