--- a/web/template/certificate_provider_enter_reference.gohtml
+++ b/web/template/certificate_provider_enter_reference.gohtml
@@ -12,7 +12,7 @@
             <form novalidate method="post">
                 <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
-                        {{ template "input" (input . "reference-code" "" .Form.ReferenceCode "classes" "govuk-input--width-20 govuk-!-margin-bottom-3")}}
+                        {{ template "input" (input . "reference-code" "referenceCode" .Form.ReferenceCode "classes" "govuk-input--width-20 govuk-!-margin-bottom-3")}}
                         {{ template "continue-button" . }}
                     </fieldset>
                 </div>
