--- a/web/template/certificate_provider_details.gohtml
+++ b/web/template/certificate_provider_details.gohtml
@@ -6,27 +6,22 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form novalidate method="post">
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-              <h1 class="govuk-fieldset__heading">{{ tr .App "certificateProviderDetails" }}</h1>
-            </legend>
+        <h1 class="govuk-heading-xl">{{ tr .App "certificateProviderDetails" }}</h1>
 
-            <p class="govuk-body">{{ tr .App "certificateProviderDetailsHint" }}</p>
+        <p class="govuk-body">{{ tr .App "certificateProviderDetailsHint" }}</p>
 
-            {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
-            {{ template "name-warning" . }}
+        {{ template "name-warning" . }}
 
-            {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
-            {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
+        {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "context" "certificateProviderDobContext" "hint" "dateOfBirthHint") }}
+        {{ template "input" (input . "mobile" "mobile" .Form.Mobile "context" "certificateProviderMobileContext" "classes" "govuk-input--width-20" "type" "tel" "autocomplete" "tel") }}
 
-            <div class="govuk-button-group">
-              {{ template "continue-button" . }}
-            </div>
-          </fieldset>
+        <div class="govuk-button-group">
+          {{ template "continue-button" . }}
         </div>
+
         {{ template "csrf-field" . }}
       </form>
     </div>
