--- a/web/template/choose_attorneys.gohtml
+++ b/web/template/choose_attorneys.gohtml
@@ -6,30 +6,25 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form novalidate method="post">
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-              <h1 class="govuk-fieldset__heading">{{ tr .App "whoWouldYouLikeToBeTheAttorneys" }}</h1>
-            </legend>
+        <h1 class="govuk-heading-xl">{{ tr .App "whoWouldYouLikeToBeTheAttorneys" }}</h1>
 
-            {{ template "details" (details . "whoWouldYouLikeToBeTheAttorneysDetailsTitle" "whoWouldYouLikeToBeTheAttorneysDetailsContent" .ShowDetails) }}
+        {{ template "details" (details . "whoWouldYouLikeToBeTheAttorneysDetailsTitle" "whoWouldYouLikeToBeTheAttorneysDetailsContent" .ShowDetails) }}
 
-            <legend class="govuk-fieldset__legend  govuk-fieldset__legend--l">{{ tr .App "attorney" }}</legend>
+        <h2 class="govuk-heading-l">{{ tr .App "attorney" }}</h2>
 
-            {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
-            {{ template "name-warning" . }}
+        {{ template "name-warning" . }}
 
-            {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
+        {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
-            {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
+        {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
-            {{ template "dob-warning" . }}
+        {{ template "dob-warning" . }}
 
-            {{ template "continue-button" . }}
-          </fieldset>
-        </div>
+        {{ template "continue-button" . }}
+
         {{ template "csrf-field" . }}
       </form>
     </div>
