--- a/web/template/choose_people_to_notify.gohtml
+++ b/web/template/choose_people_to_notify.gohtml
@@ -6,24 +6,19 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form novalidate method="post">
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-              <h1 class="govuk-fieldset__heading">{{ tr .App "whoWouldYouLikeNotify" }}</h1>
-            </legend>
+        <h1 class="govuk-heading-xl">{{ tr .App "whoWouldYouLikeNotify" }}</h1>
 
-            {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
-            {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "first-names" "firstNames" .Form.FirstNames "classes" "govuk-input--width-20") }}
+        {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
-            {{ template "name-warning" . }}
+        {{ template "name-warning" . }}
 
-            {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
+        {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
-            <div class="govuk-button-group">
-              {{ template "continue-button" . }}
-            </div>
-          </fieldset>
+        <div class="govuk-button-group">
+          {{ template "continue-button" . }}
         </div>
+
         {{ template "csrf-field" . }}
       </form>
     </div>
