--- a/web/template/choose_replacement_attorneys_summary.gohtml
+++ b/web/template/choose_replacement_attorneys_summary.gohtml
@@ -7,28 +7,29 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ trCount .App "replacementAttorneysAdded" (len .Lpa.ReplacementAttorneys) }}</h1>
 
-            {{ $showHeaders := not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
-            {{ template "attorney-summary" (listAttorneys .Lpa.ReplacementAttorneys .App "replacement" $showHeaders .Lpa) }}
+      {{ $showHeaders := not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+      {{ template "attorney-summary" (listAttorneys .Lpa.ReplacementAttorneys .App "replacement" $showHeaders .Lpa) }}
 
       <form novalidate method="post">
-        <div class="govuk-form-group">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            {{ tr .App "doYouWantToAddAnotherReplacementAttorney" }}
-          </legend>
+        <div class="govuk-form-group {{ if .Errors.Has "add-attorney" }}govuk-form-group--error{{ end }}">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              {{ tr .App "doYouWantToAddAnotherReplacementAttorney" }}
+            </legend>
 
-          <div class="govuk-form-group {{ if .Errors.Has "add-attorney" }}govuk-form-group--error{{ end }}">
             {{ template "error-message" (errorMessage . "add-attorney") }}
 
             {{ template "radios" (items . "add-attorney" ""
               (item "yes" "yes")
               (item "no" "no")
             ) }}
-          </div>
+          </fieldset>
         </div>
 
         <div class="govuk-button-group">
           {{ template "continue-button" . }}
         </div>
+
         {{ template "csrf-field" . }}
       </form>
     </div>
