--- a/web/template/fixtures.gohtml
+++ b/web/template/fixtures.gohtml
@@ -95,8 +95,27 @@
             </form>
 
             <h2 class="govuk-heading-m">Start certificate provider journey</h2>
-            <a class="govuk-button" href="{{ .CPStartLpaSignedPath }}" data-module="govuk-button">LPA signed</a>
-            <a class="govuk-button" href="{{ .CPStartLpaNotSignedPath }}" data-module="govuk-button">LPA not signed</a>
+            <p class="govuk-body">Starting this flow will send an email with reference code to the email entered below. If you don't care about seeing the email then leave the field blank.</p>
+
+            <form novalidate method="post">
+                {{ template "input" (input . "email" "email" "" "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
+
+                {{ template "error-message" (errorMessage . "cp-flow-id") }}
+
+                {{ template "radios" (items . "cp-flow-id" ""
+                    (item "startCpFlowWithId" "LPA signed and ID confirmed")
+                    (item "startCpFlowWithoutId" "LPA not signed and ID not confirmed")
+                ) }}
+
+                <div class="govuk-button-group govuk-!-padding-top-3">
+                    <button type="submit" class="govuk-button" data-module="govuk-button">Start CP flow</button>
+                </div>
+                {{ template "csrf-field" . }}
+            </form>
+
+{{/*            */}}
+{{/*            <a class="govuk-button" href="{{ .CPStartLpaSignedPath }}" data-module="govuk-button">LPA signed</a>*/}}
+{{/*            <a class="govuk-button" href="{{ .CPStartLpaNotSignedPath }}" data-module="govuk-button">LPA not signed</a>*/}}
         </div>
     </div>
 {{ end }}
