Split certificate provider sign in and identity

--- a/web/template/select_your_identity_options.gohtml
+++ b/web/template/select_your_identity_options.gohtml
@@ -1,5 +1,12 @@
 {{ template "page" . }}
 
+{{ define "serviceName" }}
+  {{ if eq .App.Page .App.Paths.CertificateProviderSelectYourIdentityOptions .App.Paths.CertificateProviderSelectYourIdentityOptions1 .App.Paths.CertificateProviderSelectYourIdentityOptions2 }}
+    {{ tr .App "beACertificateProvider" }}
+  {{ else }}
+    {{ tr .App "serviceName" }}
+  {{ end }}
+{{ end }}
 {{ define "pageTitle" }}{{ tr .App "selectYourIdentityOptions" }}{{ end }}
 
 {{ define "main" }}
