--- a/web/template/certificate_provider_read_the_lpa.gohtml
+++ b/web/template/certificate_provider_read_the_lpa.gohtml
@@ -21,9 +21,11 @@
       {{ template "people-named-on-lpa" (peopleNamedOnLpa .App .Lpa false) }}
 
       <p class="govuk-body">
-        <a href="{{ link .App .App.Paths.CertificateProviderGuidance }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-          {{ tr .App "continue" }}
-        </a>
+        {{ if .Lpa.Progress.LpaSigned.Completed }}
+          <a class="govuk-button" href="{{ link .App .App.Paths.ProvideCertificate }}" data-module="govuk-button">{{ tr .App "continue" }}</a>
+        {{ else }}
+          <a class="govuk-button" href="{{ link .App .App.Paths.CertificateProviderWhatHappensNext }}" data-module="govuk-button">{{ tr .App "continue" }}</a>
+        {{ end }}
       </p>
     </div>
   </div>
