--- a/web/template/choose_people_to_notify_summary.gohtml
+++ b/web/template/choose_people_to_notify_summary.gohtml
@@ -20,6 +20,7 @@
           <div class="govuk-button-group">
             {{ template "continue-button" . }}
           </div>
+          {{ template "csrf-field" . }}
         </form>
       {{ else }}
         <form novalidate method="post">
