--- a/web/template/certificate_provider_check_your_name.gohtml
+++ b/web/template/certificate_provider_check_your_name.gohtml
@@ -1,5 +1,6 @@
 {{ template "page" . }}
 
+{{ define "serviceName" }}{{ tr .App "beACertificateProvider" }}{{ end }}
 {{ define "pageTitle" }}{{ tr .App "checkAndConfirmYourName" }}{{ end }}
 
 {{ define "main" }}
