pass ptn count to existing fixture param, tidy

--- a/web/template/fixtures.gohtml
+++ b/web/template/fixtures.gohtml
@@ -14,9 +14,6 @@
               Pre-complete donor flow
             </h2>
           </legend>
-          <div id="waste-hint" class="govuk-hint">
-            Select all that apply.
-          </div>
           <div class="govuk-checkboxes govuk-!-margin-bottom-3" data-module="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="f-donor-details" name="donor-details" type="checkbox" value="withDonorDetails">
@@ -65,7 +62,7 @@
                 <label class="govuk-label" for="f-ptn-count">
                   How many? (Max 5)
                 </label>
-                <input class="govuk-input govuk-!-width-one-third" id="f-ptn-count" name="ptn-count">
+                <input class="govuk-input govuk-!-width-one-third" id="f-ptn-count" name="ptn-count" value="2">
               </div>
             </div>
             <div class="govuk-checkboxes__item">
