--- a/web/template/read_your_lpa.gohtml
+++ b/web/template/read_your_lpa.gohtml
@@ -16,7 +16,7 @@
         {{ tr .App "lpaDecisions" }}
       </h2>
 
-      {{ template "lpa-decisions" . }}
+      {{ template "lpa-decisions" (lpaDecisions .App true .Lpa) }}
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-2">
         {{ tr .App "peopleNamedOnTheLpa" }}
